--- a/bin/language/swedish.json
+++ b/bin/language/swedish.json
@@ -9,6 +9,7 @@
   "COINS_DISABLED" : "&cCoins är avaktiverade i denna värld.",
   "SPAWNED_COINS" : "&9Du kastade {0} mynt med radien {1} runt {2}.",
   "REMOVED_COINS" : "&9Borttaget totalt av {0} mynt.",
+  "INVENTORY_FULL" : "&cYou cannot withdraw when your inventory is full!",
 
   "PLAYER_NOT_FOUND" : "&4Den spelaren kunde inte hittas.",
   "COORDS_NOT_FOUND" : "&4Dessa koordinater eller världen kunde inte hittas.",
@@ -22,5 +23,6 @@
   "REMOVE_USAGE" : "&c/coins remove [radie|all] &7- ta bort mynt i en radie",
   "SETTINGS_USAGE" : "&c/coins settings &7- lista laddade inställningar",
   "RELOAD_USAGE" : "&c/coins reload &7- ladda om inställningar från config.yml",
+  "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
   "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- ta ut några pengar till mynt"
 }
