--- a/src/language/german.json
+++ b/src/language/german.json
@@ -9,6 +9,7 @@
   "COINS_DISABLED" : "&cCoins sind in dieser Welt nicht erlaubt.",
   "SPAWNED_COINS" : "&9Erholte {0} Coins im Radius {1} um {2}.",
   "REMOVED_COINS" : "&9Entfernt insgesamt {0} Coins.",
+  "INVENTORY_FULL" : "&cYou cannot withdraw when your inventory is full!",
 
   "PLAYER_NOT_FOUND" : "&4Dieser Spieler konnte nicht gefunden werden.",
   "COORDS_NOT_FOUND" : "&4Diese Koordinaten oder diese Welt konnte nicht gefunden werden.",
@@ -22,5 +23,6 @@
   "REMOVE_USAGE" : "&c/coins remove [radius|all] &7- Löscht Coins in einem Radius",
   "SETTINGS_USAGE" : "&c/coins settings &7- Liste der aktuell geladenen Einstellungen",
   "RELOAD_USAGE" : "&c/coins reload &7- Lade die Einstellungen von config.yml neu",
+  "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
   "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- Etwas Geld in Coins zurückziehen"
 }
