--- a/src/main/resources/language/chinese.json
+++ b/src/main/resources/language/chinese.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- 列出当前的插件配置",
   "RELOAD_USAGE" : "&c/coins reload &7- 重载config.yml文件的配置",
   "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- 把钱换成游戏币"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- 把钱换成游戏币"
 }
