--- a/src/main/resources/language/english.json
+++ b/src/main/resources/language/english.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- list the currently loaded settings",
   "RELOAD_USAGE" : "&c/coins reload &7- reload the settings from config.yml",
   "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- withdraw some money into coins"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- withdraw money into coins"
 }
