--- a/src/main/resources/language/french.json
+++ b/src/main/resources/language/french.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- liste la configuration actuellement chargée",
   "RELOAD_USAGE" : "&c/coins reload &7- recharge la configuration de config.yml",
   "VERSION_CHECK" : "&c/coins version &7- vérifie s'il y a une nouvelle version",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- retire un peu d'argent dans Coins"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- retire d'argent dans Coins"
 }
