--- a/src/main/resources/language/german.json
+++ b/src/main/resources/language/german.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- Liste der aktuell geladenen Einstellungen",
   "RELOAD_USAGE" : "&c/coins reload &7- Lade die Einstellungen von config.yml neu",
   "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- Etwas Geld in Coins zurückziehen"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- Etwas Geld in Coins zurückziehen"
 }
