--- a/src/main/resources/language/hungarian.json
+++ b/src/main/resources/language/hungarian.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- listázza az éppen betöltött beállításokat",
   "RELOAD_USAGE" : "&c/coins reload &7- újratölti a beállításokat a config.yml-ben",
   "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
-  "WITHDRAW_USAGE" : "&c/withdraw <érmék> &7- vonjon pénzt érmékre"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- vonjon pénzt érmékre"
 }
