--- a/src/main/resources/language/italian.json
+++ b/src/main/resources/language/italian.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- Elenca le impostazioni attualmenti",
   "RELOAD_USAGE" : "&c/coins reload &7- Ricarica la config.yml",
   "VERSION_CHECK" : "&c/coins version &7- Controlla se c'è una nuova versione",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- Ritirare dei soldi in coins"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- Ritirare dei soldi in coins"
 }
