--- a/src/main/resources/language/swedish.json
+++ b/src/main/resources/language/swedish.json
@@ -24,5 +24,5 @@
   "SETTINGS_USAGE" : "&c/coins settings &7- lista laddade inställningar",
   "RELOAD_USAGE" : "&c/coins reload &7- ladda om inställningar från config.yml",
   "VERSION_CHECK" : "&c/coins version &7- check if there's a new release",
-  "WITHDRAW_USAGE" : "&c/withdraw <coins> &7- ta ut några pengar till mynt"
+  "WITHDRAW_USAGE" : "&c/withdraw <worth> [amount] &7- ta ut några pengar till mynt"
 }
