config handling improvements

--- a/src/main/resources/language/english.json
+++ b/src/main/resources/language/english.json
@@ -1,24 +1,23 @@
 {
-  "LOADED_SETTINGS" : "&3&oCurrently loaded settings of the Coins configuration.",
+  "LOADED_SETTINGS" : "&3Active settings from the configuration of Coins:",
   "NO_PERMISSION" : "&4You do not have access to that command.",
   "RELOAD_SUCCESS" : "&eConfig of &6Coins &ehas been reloaded in &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oThere were some minor errors while reloading, check console.",
-  "CHECK_SETTINGS" : "&e&oYou can check the loaded settings with &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oYou withdrawn &f&o{$}{0} &e&oand received &f&o{0} coins&e&o for it.",
-  "NOT_THAT_MUCH" : "&cYou are not allowed to withdraw that much.",
+  "MINOR_ISSUES" : "&cThere were some warnings while reloading, check console.",
+  "CHECK_SETTINGS" : "&eYou can see active settings with &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eYou withdrawn &f{$}{0} &eand received &f{0} physical coins&e.",
+  "NOT_THAT_MUCH" : "&cYou cannot withdraw that much money.",
   "COINS_DISABLED" : "&cCoins are disabled in this world.",
-  "SPAWNED_COINS" : "&9Spawned {0} coins in radius {1} around {2}.",
+  "SPAWNED_COINS" : "&9Spawned {0} coins in a radius of {1} around {2}.",
   "REMOVED_COINS" : "&9Removed a total of {0} coins.",
-  "INVENTORY_FULL" : "&cYou cannot withdraw when your inventory is full!",
+  "INVENTORY_FULL" : "&cYou cannot withdraw when your inventory is full.",
 
-  "PLAYER_NOT_FOUND" : "&4That player could not be found.",
-  "COORDS_NOT_FOUND" : "&4Those coords or the world couldn't be found.",
+  "PLAYER_NOT_FOUND" : "&4That player is not online.",
+  "COORDS_NOT_FOUND" : "&4Those coordinates or world couldn't be found.",
 
   "INVALID_AMOUNT" : "&cThat is an invalid amount.",
   "INVALID_NUMBER" : "&cThat is an invalid number.",
   "INVALID_RADIUS" : "&cThat is an invalid radius.",
 
-  "COINS_HELP" : "&4:: Help for Coins",
   "DROP_USAGE" : "&c/coins drop <player|x,y,z[,world]> <amount> [radius]",
   "REMOVE_USAGE" : "&c/coins remove [radius|all] &7- remove coins in a radius",
   "SETTINGS_USAGE" : "&c/coins settings &7- list the currently loaded settings",
