--- a/src/main/resources/language/dutch.json
+++ b/src/main/resources/language/dutch.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oActuele instellingen voor de Coins configuratie.",
+  "LOADED_SETTINGS" : "&3Actuele instellingen voor de Coins configuratie.",
   "NO_PERMISSION" : "&4Je hebt hebt geen toegang tot dat commando.",
   "RELOAD_SUCCESS" : "&eInstellingen van &6Coins &ezijn herladen in &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oEr waren een paar problemen met het herladen, check console.",
-  "CHECK_SETTINGS" : "&e&oBekijk de geladen instellingen met &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oJe betaalde &f&o{$}{0} &e&oen kreeg er &f&o{0} munten&e&o voor terug.",
+  "MINOR_ISSUES" : "&cEr waren een paar problemen met het herladen, check console.",
+  "CHECK_SETTINGS" : "&eBekijk de geladen instellingen met &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eJe betaalde &f{$}{0} &een kreeg er &f{0} munten&e voor terug.",
   "NOT_THAT_MUCH" : "&cJe kan niet zo veel munten aanvragen.",
   "COINS_DISABLED" : "&cCoins is niet ingeschakeld in deze wereld.",
   "SPAWNED_COINS" : "&9Je gooide {0} munten in straal van {1} om {2} heen.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cDat is geen geldig nummer.",
   "INVALID_RADIUS" : "&cDat is geen geldige straal.",
 
-  "COINS_HELP" : "&4:: Help voor Coins",
   "DROP_USAGE" : "&c/coins drop <speler|x,y,z[,wereld]> <aantal> [straal]",
   "REMOVE_USAGE" : "&c/coins remove [straal|all] &7- verwijder munten in straal",
   "SETTINGS_USAGE" : "&c/coins settings &7- geef actuele instellingen weer",
