--- a/src/main/resources/language/french.json
+++ b/src/main/resources/language/french.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oConfiguration actuellement chargée.",
+  "LOADED_SETTINGS" : "&3Configuration actuellement chargée.",
   "NO_PERMISSION" : "&4Vous n'avez pas la permission d'accéder à cette commande.",
   "RELOAD_SUCCESS" : "&eLa configuration de &6Coins &ea été rechargée en &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oIl y a eu quelques erreurs mineures lors du rechargement, vérifiez la console.",
-  "CHECK_SETTINGS" : "&e&oVous pouvez voir la configuration chargée avec &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oVous avez retiré &f&o{$}{0} &e&oet reçu &f&o{0} coins&e&o.",
+  "MINOR_ISSUES" : "&cIl y a eu quelques erreurs mineures lors du rechargement, vérifiez la console.",
+  "CHECK_SETTINGS" : "&eVous pouvez voir la configuration chargée avec &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eVous avez retiré &f{$}{0} &eet reçu &f{0} coins&e.",
   "NOT_THAT_MUCH" : "&cVous n'êtes pas autorisé à retirer autant.",
   "COINS_DISABLED" : "&cCoins est désactivé dans ce monde.",
   "SPAWNED_COINS" : "&9{0} coin(s) apparu(s) dans un rayon {1} autour {2}.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cNombre invalide.",
   "INVALID_RADIUS" : "&cRayon invalide.",
 
-  "COINS_HELP" : "&4:: Aide pour Coins",
   "DROP_USAGE" : "&c/coins drop <joueur|x,y,z[,monde]> <montant> [rayon]",
   "REMOVE_USAGE" : "&c/coins remove [rayon|all] &7- retire des coins dans un rayon",
   "SETTINGS_USAGE" : "&c/coins settings &7- liste la configuration actuellement chargée",
