--- a/src/main/resources/language/german.json
+++ b/src/main/resources/language/german.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oDerzeit geladene Einstellungen der Coins Konfiguration.",
+  "LOADED_SETTINGS" : "&3Derzeit geladene Einstellungen der Coins Konfiguration.",
   "NO_PERMISSION" : "&4Du hast keine Berechtigung zu diesem Command.",
   "RELOAD_SUCCESS" : "&eKonfig von &6Coins &ewurde in &a{0}ms&e neu geladen.",
-  "MINOR_ISSUES" : "&c&oEs gab einige kleinere Fehler beim Nachladen, überprüfe die Konsole.",
-  "CHECK_SETTINGS" : "&e&oDu kannst dir die Einstellungen ansehen mit &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oDu hast &f&o{$}{0} &e&ozurückgezogen und dafür &f&o{0} Coins&e&o erhalten.",
+  "MINOR_ISSUES" : "&cEs gab einige kleinere Fehler beim Nachladen, überprüfe die Konsole.",
+  "CHECK_SETTINGS" : "&eDu kannst dir die Einstellungen ansehen mit &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eDu hast &f{$}{0} &ezurückgezogen und dafür &f{0} Coins&e erhalten.",
   "NOT_THAT_MUCH" : "&cDu darfst nicht so viel zurückziehen.",
   "COINS_DISABLED" : "&cCoins sind in dieser Welt nicht erlaubt.",
   "SPAWNED_COINS" : "&9Erholte {0} Coins im Radius {1} um {2}.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cDiese Nummer ist ungültig.",
   "INVALID_RADIUS" : "&cDieser Radius ist ungültig.",
 
-  "COINS_HELP" : "&4:: Hilfe mit Coins",
   "DROP_USAGE" : "&c/coins drop <spieler|x,y,z[,welt]> <betrag> [radius]",
   "REMOVE_USAGE" : "&c/coins remove [radius|all] &7- Löscht Coins in einem Radius",
   "SETTINGS_USAGE" : "&c/coins settings &7- Liste der aktuell geladenen Einstellungen",
