--- a/src/main/resources/language/hungarian.json
+++ b/src/main/resources/language/hungarian.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oAz Coin beállítása jelenleg betöltött beállításai.",
+  "LOADED_SETTINGS" : "&3Az Coin beállítása jelenleg betöltött beállításai.",
   "NO_PERMISSION" : "&4Nincs jogod ennek a parancsnak a használatára.",
   "RELOAD_SUCCESS" : "&eA konfig &6Coins&e-nak újratöltve &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oVolt néhány kisebb hiba a frissítés közben, ellenőrizze a konzolt.",
-  "CHECK_SETTINGS" : "&e&oA betöltött beállításokat ellenőrizheted a &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oVisszavontad a &f&o{$}{0} &e&oés kapott &f&o{0} érmét&e&o neki.",
+  "MINOR_ISSUES" : "&cVolt néhány kisebb hiba a frissítés közben, ellenőrizze a konzolt.",
+  "CHECK_SETTINGS" : "&eA betöltött beállításokat ellenőrizheted a &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eVisszavontad a &f{$}{0} &eés kapott &f{0} érmét&e neki.",
   "NOT_THAT_MUCH" : "&cNem lehet ennyit visszavonni.",
   "COINS_DISABLED" : "&cA Coins letiltott ebben a világban.",
   "SPAWNED_COINS" : "&9Leidézve {0} érmék {1} sugárban {2} körül.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cEz érvénytelen szám.",
   "INVALID_RADIUS" : "&cEz érvénytelen sugár.",
 
-  "COINS_HELP" : "&4:: Segítség a Coins-ról",
   "DROP_USAGE" : "&c/coins drop <játékos|x,y,z[,world]> <mennyiség> [sugár]",
   "REMOVE_USAGE" : "&c/coins remove [radius|all] &7- elveszi az érméket egy sugárban",
   "SETTINGS_USAGE" : "&c/coins settings &7- listázza az éppen betöltött beállításokat",
