--- a/src/main/resources/language/italian.json
+++ b/src/main/resources/language/italian.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oImpostazioni attualmente caricate della configurazione Coins.",
+  "LOADED_SETTINGS" : "&3Impostazioni attualmente caricate della configurazione Coins.",
   "NO_PERMISSION" : "&4Non hai accesso a quel comando.",
   "RELOAD_SUCCESS" : "&eConfigurazione di &6Coins &eè stato ricaricato &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oCi sono stati alcuni errori durante il ricaricamento, controlla la console.",
-  "CHECK_SETTINGS" : "&e&oÈ possibile controllare le impostazioni caricate con &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oAi prelevato &f&o{$}{0} &e&oe ricevuto &f&o{0} coins&e&o per questo.",
+  "MINOR_ISSUES" : "&cCi sono stati alcuni errori durante il ricaricamento, controlla la console.",
+  "CHECK_SETTINGS" : "&eÈ possibile controllare le impostazioni caricate con &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eAi prelevato &f{$}{0} &ee ricevuto &f{0} coins&e per questo.",
   "NOT_THAT_MUCH" : "&cNon ti è permesso prelevare così tanto.",
   "COINS_DISABLED" : "&cCoins sono disattivati in questo mondo.",
   "SPAWNED_COINS" : "&9Generato {0} coins nel raggio {1} in torno a {2}.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cQuesto è un numero non valido.",
   "INVALID_RADIUS" : "&cQuesto è un raggio non valido.",
 
-  "COINS_HELP" : "&4:: Info Coins",
   "DROP_USAGE" : "&c/coins drop <player|x,y,z[,Mondo]> <amount> [Raggio]",
   "REMOVE_USAGE" : "&c/coins remove [radius/all] &7- Rimuove coins nel raggio",
   "SETTINGS_USAGE" : "&c/coins settings &7- Elenca le impostazioni attualmenti",
