--- a/src/main/resources/language/swedish.json
+++ b/src/main/resources/language/swedish.json
@@ -1,10 +1,10 @@
 {
-  "LOADED_SETTINGS" : "&3&oFör närvarande laddade inställningar av Coins konfigurationen.",
+  "LOADED_SETTINGS" : "&3För närvarande laddade inställningar av Coins konfigurationen.",
   "NO_PERMISSION" : "&4Du har inte tillgång till detta kommando.",
   "RELOAD_SUCCESS" : "&eKonfiguration av &6Coins &ehar laddat i &a{0}ms&e.",
-  "MINOR_ISSUES" : "&c&oDet är några små fel när det laddade, titta konsolen.",
-  "CHECK_SETTINGS" : "&e&oDu kan kolla upp laddade inställningar med &f&o/coins settings&e&o.",
-  "WITHDRAW_COINS" : "&e&oDu tog ut &f&o{$}{0} &e&ooch tog emot &f&o{0} mynt&e&o för det.",
+  "MINOR_ISSUES" : "&cDet är några små fel när det laddade, titta konsolen.",
+  "CHECK_SETTINGS" : "&eDu kan kolla upp laddade inställningar med &f/coins settings&e.",
+  "WITHDRAW_COINS" : "&eDu tog ut &f{$}{0} &eoch tog emot &f{0} mynt&e för det.",
   "NOT_THAT_MUCH" : "&cDet är inte tillåtet att ta ut så mycket.",
   "COINS_DISABLED" : "&cCoins är avaktiverade i denna värld.",
   "SPAWNED_COINS" : "&9Du kastade {0} mynt med radien {1} runt {2}.",
@@ -18,7 +18,6 @@
   "INVALID_NUMBER" : "&cDet är en ogiltig antal.",
   "INVALID_RADIUS" : "&cDet är en ogiltig radie.",
 
-  "COINS_HELP" : "&4:: Hjälp för Coins",
   "DROP_USAGE" : "&c/coins drop <spelare|x,y,z[,värld]> <antal> [radie]",
   "REMOVE_USAGE" : "&c/coins remove [radie|all] &7- ta bort mynt i en radie",
   "SETTINGS_USAGE" : "&c/coins settings &7- lista laddade inställningar",
