--- a/src/main/resources/language/english.json
+++ b/src/main/resources/language/english.json
@@ -1,5 +1,4 @@
 {
-  "LOADED_SETTINGS" : "&3Active settings from the configuration of Coins:",
   "NO_PERMISSION" : "&4You do not have access to that command.",
   "RELOAD_SUCCESS" : "&eConfig of &6Coins &ehas been reloaded in &a{0}ms&e.",
   "MINOR_ISSUES" : "&cThere were some warnings while reloading, check console.",
@@ -28,10 +27,9 @@
 
   "DISABLED_REASONS" :  "&4Coins is disabled for the following reason(s):",
   "CURRENTLY_INSTALLED" :  "&eVersion currently installed: &f{0}",
-  "LATEST_VERSION" :  "&eLatest released version: &f{0}",
+  "LATEST_RELEASE" :  "&eThe latest released version of &6Coins&e is &f{0}&e, released on &f{1}&e, and described as &f'{2}'&e. Consider updating the plugin to this version. &eDownload at: &9{3}",
   "UP_TO_DATE" :  "&aYou're up to date with version {0}.",
   "LATEST_RETRIEVE_FAIL" :  "&cCouldn't get the latest version of Coins.",
-  "CONSIDER_UPDATING" :  "&cConsider updating the plugin to version {0}.",
 
   "ENABLED" :  "&aenabled",
   "DISABLED" :  "&cdisabled",
@@ -39,6 +37,7 @@
   "GLOBALLY_DISABLED_INFORM" : "&eCoins has been globally {0}&e. Toggle with &f/coins toggle&e.",
   "DISABLED_DESCRIPTION" :  "&eWhen disabled, coins will not drop and withdrawing coins isn't possible. Picking up coins that were already on the ground and depositing coins is still possible.",
   "WITHDRAWING_DISABLED" :  "&cWithdrawing coins is disabled on this server.",
-  "GLOBALLY_DISABLED" :  "Currently globally disabled.",
-  "OUTDATED" :  "(outdated → /coins update)"
+
+  "GLOBALLY_DISABLED" :  "(globally disabled)",
+  "OUTDATED" :  "(outdated → {0})"
 }
